[gd_scene load_steps=9 format=2]

[ext_resource path="res://audio/Crowd.wav" type="AudioStream" id=1]
[ext_resource path="res://autoloaders/MusicController.gd" type="Script" id=2]
[ext_resource path="res://audio/alexander-nakarada-chase.wav" type="AudioStream" id=3]
[ext_resource path="res://audio/13gameover4NL.wav" type="AudioStream" id=4]
[ext_resource path="res://audio/mixkit-dagger-woosh-1487 (1).wav" type="AudioStream" id=5]
[ext_resource path="res://audio/mixkit-fast-sword-whoosh-2792.wav" type="AudioStream" id=6]
[ext_resource path="res://audio/mixkit-powerful-air-whooshes-3220.wav" type="AudioStream" id=7]
[ext_resource path="res://audio/74691__benboncan__swoosh-4.wav" type="AudioStream" id=8]

[node name="Node" type="Node"]
script = ExtResource( 2 )

[node name="Crowd" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
volume_db = -25.0
bus = "Music"

[node name="Fight" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -25.0
bus = "Music"

[node name="Tween" type="Tween" parent="Fight"]

[node name="Game_over" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -15.0
bus = "Music"

[node name="player_swing" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0
bus = "SFX"

[node name="boss3_fast" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "SFX"

[node name="boss3_slow" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -10.0
bus = "SFX"

[node name="boss3_air" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
bus = "SFX"

[connection signal="finished" from="Crowd" to="." method="_on_Crowd_finished"]
[connection signal="tween_completed" from="Fight/Tween" to="." method="_on_Tween_tween_completed"]
